<resources>
    <string name="app_name">Cook Me Well</string>
    <string name="skip">Skip</string>
    <string name="cook_desc">Cook some delicious food, and share recipes that you like! It is easier when you know what to cook and how to do it.</string>
    <string name="meet_desc">Of course, it is much more pleasant to share your meal with loved ones or friends. So, invite them right from the app!</string>
    <string name="eat_desc">After you\'ve cooked something really delicious you have right to taste it and share your thoughts with the community.</string>
    <string name="eat">Eat</string>
    <string name="image">image</string>
    <string name="meet">Meet</string>
    <string name="cook">Cook</string>
    <string name="cook_me_well">CookMeWell</string>
    <string name="log_in">Log In</string>
    <string name="get_started_now">Get Started Now</string>
    <string name="cook_meet_eat">Cook. Meet. Eat.</string>
    <string name="welcome">Welcome</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_desc">Welcome to CookMeWell! \nPlease fill all the fields.</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="home">Home</string>
    <string name="add">Add</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="suggested_for_you">Suggested for you</string>
    <string name="difficulty">Difficulty:</string>
    <string name="placeholder">TextView</string>
    <string name="added_by">Added by</string>
    <string name="vegan">Vegan</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="minutes">Minutes</string>
    <string name="hours">Hours</string>
    <string name="duration">Duration</string>
    <string name="select_ingredients">Select Ingredients</string>
    <string name="type">Type</string>
    <string name="instructions">Instructions</string>
    <string name="submit">Submit</string>
    <string-array name="hours_picker">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
</resources>
