<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.AddRecipeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/food_image_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <ImageButton
            android:id="@+id/capture_image_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:src="@drawable/ic_photo_camera"
            app:layout_constraintBottom_toBottomOf="@+id/food_image_display"
            app:layout_constraintStart_toEndOf="@+id/food_image_display" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/recipe_name_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/food_image_display">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/recipe_name" />
        </com.google.android.material.textfield.TextInputLayout>

        <Switch
            android:id="@+id/vegetarian_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:switchPadding="@dimen/padding_default"
            android:text="@string/vegetarian"
            app:layout_constraintStart_toStartOf="@+id/recipe_name_input"
            app:layout_constraintTop_toBottomOf="@+id/recipe_name_input" />

        <Switch
            android:id="@+id/vegan_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:switchPadding="@dimen/padding_default"
            android:text="@string/vegan"
            app:layout_constraintBaseline_toBaselineOf="@+id/vegetarian_switch"
            app:layout_constraintStart_toEndOf="@+id/vegetarian_switch" />

        <NumberPicker
            android:id="@+id/num_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vegetarian_switch" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="TextView"
            app:layout_constraintTop_toBottomOf="@+id/vegetarian_switch"
            tools:layout_editor_absoluteX="90dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>